@@ -1,3 +1,5 @@
+- don't give a wrong package name when it is unknown in a callback (mga#15032)
+
 Version 8.03 - 1 January 2015
 
 - enhanced doc
